--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body::-webkit-scrollbar {
 }
 
 .app__header_h1 {
-  font-family: "Cormorant Upright", serif;
+  font-family: 'Cormorant Upright', serif;
   color: #dcca87;
   letter-spacing: 0.04em;
   text-transform: uppercase;
@@ -56,7 +56,7 @@ body::-webkit-scrollbar {
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: capitalize;
-  font-feature-settings: "tnum" on, "lnum" on;
+  font-feature-settings: 'tnum' on, 'lnum' on;
   line-height: 29.9px;
   font-size: 23px;
 }
@@ -84,23 +84,113 @@ body::-webkit-scrollbar {
   background: var(--color-black);
 }
 
-@media screen and (max-width: 850px) {
+/* Responsive Typography */
+@media screen and (max-width: 2000px) {
+  .app__header_h1 {
+    font-size: 65px;
+    line-height: 91px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .app__header_h1 {
+    font-size: 55px;
+    line-height: 75px;
+  }
+
   .headtext__cormorant {
     font-size: 48px;
     line-height: 62.4px;
   }
+
+  .p__cormorant {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .p__opensans {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .search__bar input {
+    width: 100%;
+    max-width: 500px;
+  }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 850px) {
+  .app__header_h1 {
+    font-size: 45px;
+    line-height: 60px;
+  }
+
   .headtext__cormorant {
     font-size: 36px;
     line-height: 46.8px;
   }
+
+  .p__cormorant {
+    font-size: 18px;
+    line-height: 23px;
+  }
+
+  .custom__button {
+    font-size: 16px;
+    padding: 0.4rem 1.2rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__header_h1 {
+    font-size: 35px;
+    line-height: 45px;
+  }
+
+  .headtext__cormorant {
+    font-size: 28px;
+    line-height: 36.4px;
+  }
+
+  .p__cormorant {
+    font-size: 16px;
+    line-height: 21px;
+  }
+
+  .p__opensans {
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .custom__button {
+    font-size: 14px;
+    padding: 0.3rem 1rem;
+  }
 }
 
 @media screen and (max-width: 450px) {
+  .app__header_h1 {
+    font-size: 28px;
+    line-height: 38px;
+  }
+
   .headtext__cormorant {
     font-size: 24px;
     line-height: 31.2px;
+  }
+
+  .p__cormorant {
+    font-size: 14px;
+    line-height: 19px;
+  }
+
+  .p__opensans {
+    font-size: 11px;
+    line-height: 18px;
+  }
+
+  .custom__button {
+    font-size: 12px;
+    padding: 0.25rem 0.8rem;
   }
 }
