--- a/src/Components/SpecialMenu/specialmenu.css
+++ b/src/Components/SpecialMenu/specialmenu.css
@@ -1,69 +1,140 @@
-.app__specialmenu{
-    background-color: #0C0C0C;
-    width: 100%;
-    min-height: 100vh;
+.app__specialmenu {
+  background-color: #0c0c0c;
+  width: 100%;
+  min-height: 100vh;
+  padding: 4rem 0;
 }
 
-.app__specialmenu-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 1.5rem;
+.app__specialmenu-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 0;
+  text-align: center;
 }
 
-.app__specialMenu-menu{
-    width: 100%;
-    padding: 2rem 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: row;
+.app__specialMenu-menu {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
 }
 
-.menu_2{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu_1,
+.menu_3 {
+  flex: 1;
+  width: 100%;
 }
 
-.menu_2 img{
-    height: 450px;
-    width: auto;
-    padding: 2rem;
+.menu_2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
 }
 
-.btn-bottom{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu_2 img {
+  height: auto;
+  max-height: 450px;
+  width: auto;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.menu1__content,
+.menu3__content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.btn-bottom {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.btn-bottom .custom__button {
+  min-width: 200px;
 }
 
 @media screen and (max-width: 1150px) {
-    .menu_2 img{
-        padding: 2rem;
-        margin-top: 8rem;
-    }
+  .app__specialMenu-menu {
+    padding: 2rem 1.5rem;
+  }
+
+  .menu_2 img {
+    max-height: 400px;
+  }
 }
 
 @media screen and (max-width: 850px) {
-    .menu_2 img{
-        height: 300px;
-        width: auto;
-        margin-top: 15rem;
-    }
+  .app__specialmenu {
+    padding: 3rem 0;
+  }
+
+  .app__specialMenu-menu {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .menu_1,
+  .menu_3 {
+    width: 100%;
+    max-width: 600px;
+  }
+
+  .menu_2 {
+    order: -1;
+    margin-bottom: 2rem;
+  }
+
+  .menu_2 img {
+    max-height: 300px;
+  }
 }
 
 @media screen and (max-width: 650px) {
-    .menu_2 img{
-        display: none;
-    }
+  .app__specialmenu {
+    padding: 2rem 0;
+  }
+
+  .app__specialMenu-menu {
+    padding: 1rem 0.5rem;
+  }
+
+  .menu_2 {
+    display: none;
+  }
+
+  .menu1__content,
+  .menu3__content {
+    gap: 1rem;
+  }
 }
 
 @media screen and (max-width: 450px) {
-    .app__specialMenu-menu{
-        flex-direction: column;
-    }
-}
+  .app__specialmenu {
+    padding: 1.5rem 0;
+  }
 
+  .app__specialmenu-container {
+    padding: 1rem 0;
+  }
+
+  .app__specialMenu-menu {
+    padding: 0.5rem;
+  }
+
+  .btn-bottom .custom__button {
+    min-width: 150px;
+  }
+}
